homework/5.kubernetes-network/deployment-with-env-redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 300m
            memory: 300Mi
          limits:
            cpu: 300m
            memory: 300Mi
