homework/5.kubernetes-network/service-redmine.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: red
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: redmine
