homework/5.kubernetes-network/ingress-red.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-redmine
spec:
  rules:
  - http:
      paths:
      - path: /      
        backend:
          serviceName: red
          servicePort: 3000
